# XOR-Neural-Network-In-Haskell

./: README.md  stack.yaml  xor.cabal
app/: Main.hs
